// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserCreateAccountPageComponent should snap if user has not created an account and has a valid url 1`] = `
<tm-user-create-account-page
  accountService={[Function AccountService]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  hasJoined="false"
  isLoading="false"
  key={[Function String]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  router={[Function Router]}
  userId=""
  validUrl={[Function Boolean]}
>
  <div>
    
    <div
      class="card bg-light mx-auto"
      style="max-width: 800px;"
    >
      <div
        class="card-header bg-warning"
      >
        <h3
          style="margin-bottom: 0;"
        >
          Not logged in
        </h3>
      </div>
      <div
        class="card-body"
      >
         You are not logged in. Please log in first. 
      </div>
    </div>
    
    
  </div>
</tm-user-create-account-page>
`;

exports[`UserCreateAccountPageComponent should snap with default fields 1`] = `
<tm-user-create-account-page
  accountService={[Function AccountService]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  hasJoined="false"
  isLoading={[Function Boolean]}
  key={[Function String]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  router={[Function Router]}
  userId=""
  validUrl={[Function Boolean]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-user-create-account-page>
`;

exports[`UserCreateAccountPageComponent should snap with invalid url 1`] = `
<tm-user-create-account-page
  accountService={[Function AccountService]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  hasJoined="false"
  isLoading="false"
  key={[Function String]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function Object]}
  router={[Function Router]}
  userId=""
  validUrl="false"
>
  <div>
    
    
    <div
      class="card bg-light mx-auto"
      style="max-width: 800px;"
    >
      <div
        class="card-header bg-warning"
      >
        <h3
          style="margin-bottom: 0;"
        >
          Invalid account creation link
        </h3>
      </div>
      
      <div
        class="card-body"
      >
         Please check that you copied the entire account creation link URL, or have it resent to you if this message persists. 
      </div>
      
    </div>
    
  </div>
</tm-user-create-account-page>
`;
